Fix homepage and small screen alignment.

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -4,7 +4,7 @@
 @include media-breakpoint-down(md) {
   .td-main {
     main {
-      padding-top: 0.5rem;
+      padding-top: 1rem;
     }
   }
 }
@@ -22,6 +22,7 @@
 // correctly color the sidebars (when on wide screen)
 // --------------------------------------------------
 .td-outer {
+  padding: 0;
   height: 100%;
   background-color: $td-sidebar-bg-color;
 }
@@ -30,6 +31,15 @@
 }
 main {
   background-color: #ffffff;
+}
+
+// --------------------------------------------------
+// add border below search on small devices
+// --------------------------------------------------
+@include media-breakpoint-down(md) {
+   .td-sidebar {
+     border-bottom: 0.1rem solid $border-color;
+   }
 }
 
 // --------------------------------------------------
@@ -92,6 +102,8 @@ footer {
 // --------------------------------------------------
 footer {
   min-height: auto;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
 
   p {
     margin-bottom: 0.4rem;
@@ -118,8 +130,6 @@ footer {
 
 // sidebar search styling
 .td-sidebar__search {
-  padding-left: 0;
-  padding-right: 0;
   padding-top: 0;
   padding-bottom: 1rem;
 
@@ -127,7 +137,20 @@ footer {
 
   .td-search {
     width: 100%;
-    @include media-breakpoint-up(md) {
+  }
+
+  @include media-breakpoint-down(md) {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+    .td-search {
+      padding-right: 0.25rem;
+    }
+  }
+
+  @include media-breakpoint-up(md) {
+    padding-left: 0;
+    padding-right: 0;
+    .td-search {
       padding-right: 0.5rem;
     }
   }
@@ -366,7 +389,7 @@ nav.foldable-nav {
     margin: 0 0 1.5em 1.5em;
   }
 
-  #overview, .components, #cncf, #community {
+  #overview, #pageContent, #cncf, #community {
     padding: 4rem 0 4rem 0 !important;
   }
 
@@ -376,19 +399,20 @@ nav.foldable-nav {
 
   #overview {
     border-bottom: 0.1rem solid #b6d0ff;
-    text-align: center;
+  }
+
+  #pageContent .container {
+    max-width: 70rem;
   }
 
   #community {
     border-top: 0.1rem solid #b6d0ff;
     border-bottom: 0.1rem solid #b6d0ff;
-    text-align: center;
   }
 
   #cncf {
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
-    text-align: center;
 
     .cncf-title {
       color: #6b7281;
